# ccRPC

./: README.md
common/include/: cal_udp.h  ccnet.h  hashmap.h  ikcp.h  in_cksum.h  mq_posix.h  rbtree.h  rpc.h  rpc_cal_tcp.h  rpc_gen.h  rpc_method.h  rpc_methods_decl.h  rpc_result.h  rpc_time.h  rpc_tlv.h  scp.h  scp_time.h
common/src/: cal_udp.c  ccnet.c  hashmap.c  kcp.c  mq_posix.c  queue.c  rbtree.c  rpc.c  rpc_cal_tcp.c  rpc_gen.c  rpc_methods_impl.c  rpc_result.c  rpc_tlv.c  scp.c  scp_time.c
nodeA/: CMakeLists.txt
nodeA/include/: rpc_methods_nodeA.xdef  services_fs.h
nodeA/src/: main.c  services_fs.c
nodeB/: CMakeLists.txt
nodeB/include/: rpc_methods_nodeB.xdef  services_shell.h
nodeB/src/: main.c  services_shell.c
nodeC/: CMakeLists.txt
nodeC/src/: main.c
